# screenai

./: .env.example  .gitignore  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  main.py
backend/app/api/: router.py
backend/app/api/routes/: admin.py  ai.py  analytics.py  auth.py  candidates.py  jobs.py  notifications.py  reports.py  resumes.py
backend/app/core/: cache.py  config.py  database.py  deps.py  logging.py  security.py
backend/app/models/: __init__.py  activity_log.py  candidate.py  candidate_score.py  embedding.py  job.py  mixins.py  notification.py  refresh_token.py  report.py  resume.py  skill.py  user.py
backend/app/repositories/: candidate_repo.py  embedding_repo.py  job_repo.py  user_repo.py
backend/app/schemas/: analytics.py  auth.py  candidate.py  job.py  resume.py  user.py
backend/app/services/: activity.py  auth_service.py  matching.py  parsing.py  reports.py  screening.py  skills_db.py
backend/app/services/ai/: __init__.py  local_provider.py  openai_provider.py  provider.py
backend/app/utils/: files.py
backend/app/workers/: celery_app.py  tasks.py
backend/tests/: conftest.py  test_api_auth.py  test_api_flow.py  test_auth_service.py  test_cache.py  test_local_provider.py  test_matching.py  test_matching_html.py  test_parsing.py  test_parsing_extra.py  test_screening_e2e.py  test_security.py  test_skills.py
docs/: capture_screenshots.mjs
(+47 files in other folders)
